--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,3 @@
-body {
-  overflow: hidden; }
-
 html, body, main {
   height: 100%;
   width: 100%; }
@@ -27,20 +24,33 @@ img {
   z-index: 20;
   background: white;
   opacity: 1;
-  transition: .3s linear; }
+  transition: 0.6s ease-in-out; }
   .logo img {
     width: 10%; }
+  .logo img:last-child {
+    display: none; }
 
 .menu {
   border-radius: 50%;
   width: 65.44em;
   height: 65.44em;
-  position: absolute;
+  position: fixed;
   z-index: 2;
   top: 50%;
   left: 0;
-  transform: translate(-66%, -50%);
-  background: linear-gradient(to bottom, #afcadd, #afcadd 50%, #78a3c4, #78a3c4 50%); }
+  transform: translate(-80%, -50%) rotate(45deg);
+  background: linear-gradient(to bottom, #afcadd, #afcadd 50%, #78a3c4, #78a3c4 50%);
+  transition: 0.6s ease-in-out; }
+  .menu:before {
+    content: '';
+    position: absolute;
+    z-index: 33;
+    left: 50%;
+    top: 50%;
+    border-radius: 50%;
+    width: 85%;
+    height: 85%;
+    transform: translate(-50%, -50%); }
   .menu-inner {
     width: 28%;
     height: 28%;
@@ -50,7 +60,8 @@ img {
     z-index: 2;
     top: 50%;
     left: 50%;
-    transform: translate(0%, -50%); }
+    transform: translate(0%, -50%) rotate(-45deg);
+    transition: 0.6s ease-in-out; }
   .menu .label {
     position: absolute;
     z-index: 4;
@@ -58,11 +69,13 @@ img {
     top: 50%;
     display: flex;
     align-items: center;
-    transform: translate(100%, -50%); }
+    transform: translate(100%, -50%) rotate(-45deg);
+    transition: none; }
     .menu .label-image {
       padding: 0.625em;
       border-radius: 0 1.25em 1.25em 1.25em;
       width: 5.625em;
+      height: 5.625em;
       background: #0f5e9e;
       position: relative; }
       .menu .label-image:before {
@@ -76,19 +89,38 @@ img {
         height: 85%;
         border-radius: 0 1.25em 1.25em 1.25em;
         border: 1px solid white; }
+      .menu .label-image img {
+        height: 100%;
+        object-fit: contain; }
     .menu .label-text {
       background: #0f5e9e;
       color: white;
-      width: 12.625em;
+      width: 0;
       height: 2.3125em;
       border-radius: 0 1.875em 1.875em 0;
       text-align: right;
       display: flex;
       align-items: center;
       justify-content: flex-end;
-      padding: 0 1rem; }
+      transition: 0.6s ease-in-out; }
       .menu .label-text img {
         height: 40%;
-        width: auto; }
+        width: auto;
+        margin-right: 1em;
+        opacity: 0;
+        transition: none; }
+  .menu-pseudo {
+    position: absolute;
+    z-index: 5;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    transform: rotate(45deg);
+    transition: none; }
+    .menu-pseudo.mod .label-image {
+      background: #2069FC; }
+    .menu-pseudo.mod .label-text {
+      background: #2069FC; }
 
 /*# sourceMappingURL=style.css.map */
